# LFS-Pain

./: CMakeLists.txt  Makefile  README.md  idt.asm  kernel.asm  keyboard.asm  linker.ld
boot/: boot.asm  isr_stubs.asm
iso/boot/: kernel.elf
iso/boot/grub/: grub.cfg
kernel/: idt.c  idt.h  irq.c  irq.h  isr.c  isr.h  keyboard.c  keyboard.h  kmain.c  kmalloc.c  mmu.c  pic.c  pic.h  pit.c  pit.h  shell.c  shell.h  vga.c  vga.h
src/: kernel.asm  linker.ld
